# UltraFastFileSearch-Rust

./: .gitignore  Cargo.toml  README.md  build.rs
benches/: benchmark.rs
src/: lib.rs  main.rs
src/config/: app_configs.rs  constants.rs  mod.rs  worker_threads.rs
src/modules/: mod.rs
src/modules/algo_selector/: algo_selector_impl.rs  mod.rs
src/modules/directory_reader/: directory_reader_impl.rs  mod.rs
src/modules/disk_reader/: disk_reader_impl.rs  drive_info.rs  mod.rs
src/modules/errors/: errors_impl.rs  mod.rs
src/modules/logger/: logger_impl.rs  mod.rs
src/modules/path_reader/: mod.rs  path_reader_impl.rs
src/modules/process/: directories.rs  mod.rs
src/modules/runtime/: builder.rs  mod.rs
src/modules/utils/: initialization.rs  mod.rs  temp_files_dirs_impl.rs  tree_printer.rs  utils_impl.rs
