[package]
name = "UltraFastFileSearch"
version = "0.1.1"
edition = "2021"
build = "build.rs"
description = "Read Directories & Files"

# Specify the library crate
[lib]
name = "UltraFastFileSearch_library"
path = "src/lib.rs"

# Main binary
[[bin]]
name = "uffs"
path = "src/main.rs"

# CLI tool binary
[[bin]]
name = "uffs_cli"
path = "src/bin/cli.rs"

[dependencies]
rayon = "1.10.0"
tokio = { version = "1.39.2", features = ["full"] }
tokio-stream = { version = "0.1.15", features = ["fs"] }
async-std = "1.12.0"
sysinfo = "0.31.2"
threadpool = "1.8.1"
flume = "0.11.0"
ignore = "0.4.22"
thread_local = "1.1.8"
async-recursion = "1.1.1"
futures = "0.3.30"
chrono = "0.4.38"
either = "1.13.0"
num_cpus = "1.16.0"
num-format = "0.4.4"
colored = "2.1.0"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["time", "env-filter"] }
tracing-appender = "0.2.3"
dirs-next = "2.0.0"
time = "0.3.36"
once_cell = "1.19.0"
async-trait = "0.1.81"
jwalk = "0.8.1"
winapi = "0.3.9"
tempfile = "3.12.0"
rand = "0.8.5"
anyhow = "1.0.86"
serde = { version = "1.0.205", features = ["derive"] }
log = "0.4.22"
thiserror = "1.0.63"
miette = "7.2.0"

[build-dependencies]
toml = "0.8.19"
dirs-next = "2.0.0"
chrono = "0.4.38"
time = "0.3.36"
log = "0.4.22"
simplelog = "0.12.2"
winapi = { version = "0.3.9", features = ["fileapi", "minwindef", "winbase", "winerror", "winnt"] }

[dev-dependencies]
criterion = "0.5.1"
rand = "0.8.5"
rayon = "1.10.0"
lazy_static = "1.5.0"

[profile.dev]
opt-level = 0
debug = true
debug-assertions = true
overflow-checks = true
incremental = true
codegen-units = 16
rpath = false

[profile.release]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
incremental = false
codegen-units = 1
lto = true
panic = "abort"
strip = "symbols"

[profile.debug-optimized]
inherits = "dev"
opt-level = 2
debug = true
debug-assertions = true
overflow-checks = true

[profile.bench]
inherits = "release"
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
incremental = false
codegen-units = 1
lto = "thin"
strip = "debuginfo"

